# CAS

./: .gitignore  README.md  adjacent_info_analysis.py  appendix_prompt_samples.txt  benchmark_data_collector.fixed.py  benchmark_data_collector.py  benchmark_monitor.py  bullwhip_cdf_dashboard.py  cleanup.sh  complete_cas_publication_analysis.py  complete_database_documentation.txt  comprehensive_benchmark.sh  comprehensive_test.py  database_report.txt  db_analysis_temp.py  db_debug.sh  db_schema.txt  db_summary.txt  debug_experiment.sh  debug_scm.py  debug_subprocess.py  documentation.txt  enhanced_complete_cas_analysis.py  experiment_details.sh  full_prompts_examples.txt  implementation plan.docx  inspect_db.sh  integration_test.py  llama_vs_or_dashboard.py  merge_and_clean_database.py  merge_experiments.py  monitor_experiment.py  monitor_experiment.sh  promp_and_performance.py  pyproject.toml  run_missing_safe.py  run_parallel.sh  scm_arena_analysis.py  scm_arena_analysis_report.txt  scm_cas_analysis_fixed.py  (+7 more)
comprehensive_test/: summary_stats.txt
examples/: basic_game_example.py
llm_analysis/: summary_stats.txt
src/scm_arena/: __init__.py  cli.py  cli.py.backup2  data_capture.py
src/scm_arena/beer_game/: __init__.py  agents.py  baseline_agents.py  game.py
src/scm_arena/evaluation/: __init__.py  scenarios.py
src/scm_arena/models/: __init__.py  ollama_client.py
src/scm_arena/utils/: seeding.py
src/scm_arena/visualization/: __init__.py  plots.py
